tests/vrml97/good/self-referential-script-in-proto.wrl
#VRML V2.0 utf8
PROTO Node [] {
  DEF S Script {
    field SFNode val0 USE S
    field MFNode val1 [ Group {}, USE S, Group {} ]
  }
}
Node {}
